--- a/src/app/views/account/profile/edit/edit.html
+++ b/src/app/views/account/profile/edit/edit.html
@@ -5,12 +5,8 @@
         <div class="col-sm-9 no-padding no-float">
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
-                    <label>First Name</label>
-                    <input type="text" name="firstname" required class="input-text full-width" placeholder="first name">
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Last Name</label>
-                    <input type="text" name="lastname" required class="input-text full-width" placeholder="last name">
+                    <label>Name</label>
+                    <input type="text" name="name" required class="input-text full-width" placeholder="name">
                 </div>
             </div>
             <div class="row form-group">
@@ -18,26 +14,8 @@
                     <label>Email Address</label>
                     <input type="text" name="email" required class="input-text full-width" placeholder="email address">
                 </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Verify Email Address</label>
-                    <input type="text" class="input-text full-width" placeholder="verify email">
-                </div>
             </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Country Code</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option>United Kingdom (+44)</option>
-                            <option>United States (+1)</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Phone Number</label>
-                    <input type="text" name="phone" required class="input-text full-width" placeholder="">
-                </div>
-            </div>
+
             <div class="row form-group">
                 <label class="col-xs-12">Date of Birth</label>
                 <div class="col-xs-4 col-sm-2">
@@ -63,67 +41,9 @@
                 </div>
             </div>
             <hr>
-            <h2>Contact Details</h2>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Street Name</label>
-                    <input type="text" class="input-text full-width">
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Address</label>
-                    <input type="text" class="input-text full-width">
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>City</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">Select...</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Country</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">Select...</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Region State</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">Select...</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <h2>Upload Profile Photo</h2>
-            <div class="row form-group">
-                <div class="col-sms-12 col-sm-6 no-float">
-                    <div>Select Photo</div>
-                    <div class="fileinput button" ngf-select ngf-change="upload($files)">Upload on file change</div>
 
-                    <br/>
-                    <div ngf-drop ng-model="editProfileMdl.fileToUpload" class="upload-drop-zone"
-                         ngf-drag-over-class="drop" ngf-multiple="false" ngf-allow-dir="false"
-                            >Drop Images or PDFs files here</div>
-                    <div ng-if="editProfileMdl.fileToUpload[0]">
-                        Selected File:{{editProfileMdl.fileToUpload[0].name}}
-                    </div>
-                    <div ngf-no-file-drop>File Drag/Drop is not supported for this browser</div>
-                </div>
-            </div>
-            <hr>
-            <h2>Describe Yourself</h2>
-            <div class="form-group">
-                <textarea rows="5" class="input-text full-width" placeholder="please tell us about you"></textarea>
-            </div>
+
+
             <div class="from-group">
                 <button type="submit" ui-sref="main.account.profile.view" class="btn-medium col-sms-6 col-sm-4">UPDATE</button>
                 <button ui-sref="main.account.profile.view" class="btn-medium btn-default col-sms-6 col-sm-4">CANCEL</button>
