--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -1,2 +1,42 @@
-<h1>Job Site List</h1>
-<button ui-sref="main.account.jobsites.add">Add Job Site</button>
+
+<h2>Manage Your Jobsites <button class="btn-mini status pull-right add-button" ui-sref="main.account.jobsites.add">Add Jobsite</button></h2>
+<!--<div class="filter-section gray-area clearfix">
+    <form>
+        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='all'}" ng-click="listEquiMdl.updateFilter('all')">
+            <input type="radio" name="filter" />
+            All Equipments
+        </label>
+        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='rent'}" ng-click="listEquiMdl.updateFilter('rent')">
+            <input type="radio" name="filter" />
+            On Rent
+        </label>
+        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='vacant'}" ng-click="listEquiMdl.updateFilter('vacant')">
+            <input type="radio" name="filter" />
+            Vacant
+        </label>
+    </form>
+</div>-->
+<div class="booking-history">
+    <div class="booking-info clearfix">
+        <div class="date">
+            <a class="hover-effect popup-gallery"><img width="72" height="72" alt="" src=""></a>
+        </div>
+        <h4 class="box-title">
+            <i class="icon soap-icon-departure yellow-color circle"></i>{{Jobsite Name}}
+            <small>{{jobsite city}},{{jobsite state}},{{jobsite country}}</small>
+        </h4>
+        <dl class="info">
+            <dt>Used This Jobsite</dt>
+            <dd>12 times</dd>
+            <dt>Popularity Level</dt>
+            <dd>3</dd>
+        </dl>
+
+        <button class="btn-mini status" ng-click="listEquiMdl.delete(pro)">Delete</button>
+        <button class="btn-mini status" ng-click="listEquiMdl.edit(pro)">Edit</button>
+        <button class="btn-mini status" ui-sref="main.equiDetails({id:pro.id})">View</button>
+    </div>
+    <a ng-click="listEquiMdl.next()" class="uppercase full-width button btn-large" ng-show="listEquiMdl.nextAvailable">
+        <span ng-show="listEquiMdl.working" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+        load more </a>
+</div>
