--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -22,8 +22,8 @@
             <a class="hover-effect popup-gallery"><img width="72" height="72" alt="" src=""></a>
         </div>
         <h4 class="box-title">
-            <i class="icon soap-icon-departure yellow-color circle"></i>{{Jobsite Name}}
-            <small>{{jobsite city}},{{jobsite state}},{{jobsite country}}</small>
+            <i class="icon soap-icon-departure yellow-color circle">{{'Jobsite Name'}}</i>
+            <small>{{'jobsite city'}},{{'jobsite state'}},{{'jobsite country'}}</small>
         </h4>
         <dl class="info">
             <dt>Used This Jobsite</dt>
