--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -33,7 +33,7 @@
         </dl>
 
         <button class="btn-mini status" ng-click="delete(site)">Delete</button>
-        <button class="btn-mini status" ng-click="edit(site)">Edit</button>
+        <button class="btn-mini status" ui-sref="main.account.jobsites.edit({id:site.id})">Edit</button>
     </div>
 
 </div>
