--- a/src/app/views/account/inventory/list/list.html
+++ b/src/app/views/account/inventory/list/list.html
@@ -1,2 +1,95 @@
-<h1>List of inventory</h1>
- <button ui-sref="main.account.inventory.add">Add</button>
+
+<h2>All your Inventory ! <button class="btn-mini status pull-right add-button" ui-sref="main.account.inventory.add">Add Inventory</button></h2>
+<!--<div class="filter-section gray-area clearfix">
+    <form>
+        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='all'}" ng-click="listEquiMdl.updateFilter('all')">
+            <input type="radio" name="filter" />`
+            All Equipments
+        </label>
+        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='rent'}" ng-click="listEquiMdl.updateFilter('rent')">
+            <input type="radio" name="filter" />
+            On Rent
+        </label>
+        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='vacant'}" ng-click="listEquiMdl.updateFilter('vacant')">
+            <input type="radio" name="filter" />
+            Vacant
+        </label>
+    </form>
+</div>-->
+<div class="booking-history">
+    <div class="booking-info clearfix">
+        <h4 class="box-title">
+            <i class="icon soap-icon-card yellow-color circle"></i>Product Name
+            <small>ID : 1234567890</small>
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>ABS-EXC-123456-098
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>Rent
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>Available
+        </h4>
+
+        <button class="btn-mini status">Delete</button>
+        <button class="btn-mini status">Edit</button>
+    </div>
+    <div class="booking-info clearfix">
+        <h4 class="box-title">
+            <i class="icon soap-icon-card yellow-color circle"></i>Product Name
+            <small>ID : 1234567890</small>
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>ABS-EXC-123456-098
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>Rent
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>Available
+        </h4>
+
+        <button class="btn-mini status">Delete</button>
+        <button class="btn-mini status">Edit</button>
+    </div>
+    <div class="booking-info clearfix">
+        <h4 class="box-title">
+            <i class="icon soap-icon-card yellow-color circle"></i>Product Name
+            <small>ID : 1234567890</small>
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>ABS-EXC-123456-098
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>Rent
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>Available
+        </h4>
+
+        <button class="btn-mini status">Delete</button>
+        <button class="btn-mini status">Edit</button>
+    </div>
+    <div class="booking-info clearfix">
+        <h4 class="box-title">
+            <i class="icon soap-icon-card yellow-color circle"></i>Product Name
+            <small>ID : 1234567890</small>
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>ABS-EXC-123456-098
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>Rent
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>Available
+        </h4>
+
+        <button class="btn-mini status">Delete</button>
+        <button class="btn-mini status">Edit</button>
+    </div>
+    <a ng-click="listEquiMdl.next()" class="uppercase full-width button btn-large" ng-show="listEquiMdl.nextAvailable">
+        <span ng-show="listEquiMdl.working" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+        load more </a>
+</div>
