--- a/src/app/views/account/orders/list/list.html
+++ b/src/app/views/account/orders/list/list.html
@@ -1,2 +1,60 @@
-<h1>List of orders</h1>
-<button ui-sref="main.account.orders.view">View Detail</button>
+
+<h2>My Orders</h2>
+
+<div class="booking-history">
+    <div class="booking-info clearfix">
+        <h4 class="box-title">
+            <i class="icon soap-icon-card yellow-color circle"></i>Order
+            <small>ID : 1234567890</small>
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>3 items
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>$ 23,456.00
+        </h4>
+
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
+    </div>
+    <div class="booking-info clearfix">
+        <h4 class="box-title">
+            <i class="icon soap-icon-card yellow-color circle"></i>Order
+            <small>ID : 1234567890</small>
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>3 items
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>$ 23,456.00
+        </h4>
+
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
+    </div>
+    <div class="booking-info clearfix">
+        <h4 class="box-title">
+            <i class="icon soap-icon-card yellow-color circle"></i>Order
+            <small>ID : 1234567890</small>
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>3 items
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>$ 23,456.00
+        </h4>
+
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
+    </div>
+
+    <a ng-click="listEquiMdl.next()" class="uppercase full-width button btn-large" ng-show="listEquiMdl.nextAvailable">
+        <span ng-show="listEquiMdl.working" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+        load more </a>
+</div>
