Order Confirmation page

--- a/src/app/views/order-confirmation/order-confirmation.html
+++ b/src/app/views/order-confirmation/order-confirmation.html
@@ -1,1 +1,35 @@
-<h1>Order Confirmation</h1>
+<div class="booking-information travelo-box">
+    <h2>Order Confirmation</h2>
+    <hr />
+    <div class="booking-confirmation clearfix">
+        <i class="soap-icon-recommend icon circle"></i>
+        <div class="message">
+            <h4 class="main-message">Thank You! Your Order Booking is Confirmed.</h4>
+            <p>A confirmation email has been sent to your provided email address.</p>
+        </div>
+        <a href="#" class="button print-button btn-small uppercase">Print Details</a>
+
+    </div>
+    <hr />
+    <h2>Order Information</h2>
+    <dl class="term-description">
+        <dt>Order number:</dt><dd>5784-BD245</dd>
+        <dt>First name:</dt><dd>Fawad</dd>
+        <dt>Last name:</dt><dd>Hasan</dd>
+        <dt>E-mail address:</dt><dd>fawad.hasan@gmail.com</dd>
+        <dt>Street Address and number:</dt><dd>353 Third floor Avenue</dd>
+        <dt>Town / City:</dt><dd>Houston,Texas</dd>
+        <dt>ZIP code:</dt><dd>22480</dd>
+        <dt>Country:</dt><dd>United States of America</dd>
+    </dl>
+    <hr />
+    <h2>Payment</h2>
+    <p>Praesent dolor lectus, rutrum sit amet risus vitae, imperdiet cursus neque. Nulla tempor nec lorem eu suscipit. Donec dignissim lectus a nunc molestie consectetur. Nulla eu urna in nisi adipiscing placerat. Nam vel scelerisque magna. Donec justo urna, posuere ut dictum quis.</p>
+    <br />
+    <p class="red-color">Payment is made by Credit Card Via Paypal.</p>
+    <hr />
+    <h2>View Booking Details</h2>
+    <p>Praesent dolor lectus, rutrum sit amet risus vitae, imperdiet cursus neque. Nulla tempor nec lorem eu suscipit. Donec dignissim lectus a nunc molestie consectetur. Nulla eu urna in nisi adipiscing placerat. Nam vel scelerisque magna. Donec justo urna, posuere ut dictum quis.</p>
+    <br />
+    <a href="#" class="red-color underline view-link">View Details of the Order</a>
+</div>
