--- a/src/app/views/account/inventory/list/list.html
+++ b/src/app/views/account/inventory/list/list.html
@@ -1,95 +1,37 @@
 
-<h2>All your Inventory ! <button class="btn-mini status pull-right add-button" ui-sref="main.account.inventory.add">Add Inventory</button></h2>
-<!--<div class="filter-section gray-area clearfix">
-    <form>
-        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='all'}" ng-click="listEquiMdl.updateFilter('all')">
-            <input type="radio" name="filter" />`
-            All Equipments
-        </label>
-        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='rent'}" ng-click="listEquiMdl.updateFilter('rent')">
-            <input type="radio" name="filter" />
-            On Rent
-        </label>
-        <label class="radio radio-inline" ng-class="{'checked':listEquiMdl.filter=='vacant'}" ng-click="listEquiMdl.updateFilter('vacant')">
-            <input type="radio" name="filter" />
-            Vacant
-        </label>
-    </form>
-</div>-->
+<div class="row form-group">
+    <div class="col-sms-6 col-sm-6">
+        <label>Select Product</label>
+        <div class="selector">
+            <select name="select-product" ng-model="invMdl.equiId" class="full-width" ng-options="e.id as e.name for e in invMdl.equis">
+            </select>
+        </div>
+    </div>
+    <div class="col-sms-6 col-sm-6">
+        <button class=" status pull-right add-button" ui-sref="main.account.inventory.add">Add Inventory</button>
+    </div>
+</div>
+<br/>
+<br/>
+
 <div class="booking-history">
-    <div class="booking-info clearfix">
+    <div class="booking-info clearfix" ng-repeat="inv in mdl.inventories">
         <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Product Name
-            <small>ID : 1234567890</small>
+            <i class="icon soap-icon-card yellow-color circle"></i>{{inv.product.name}}
+            <small>ID : {{inv.id}}</small>
         </h4>
         <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>ABS-EXC-123456-098
+            <i class="icon yellow-color circle"></i>{{inv.serial_no || "XXX-XXX-XXX"}}
         </h4>
         <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>Rent
+            <i class="icon yellow-color circle"></i>{{inv.source}}
         </h4>
         <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>Available
+            <i class="icon yellow-color circle"></i>{{inv.is_active? 'Available' : 'Not Available'}}
         </h4>
 
-        <button class="btn-mini status">Delete</button>
-        <button class="btn-mini status">Edit</button>
+        <button class="btn-mini status">Archive</button>
+        <button class="btn-mini status" ui-sref="main.account.inventory.edit({id:inv.id})">Edit</button>
     </div>
-    <div class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Product Name
-            <small>ID : 1234567890</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>ABS-EXC-123456-098
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>Rent
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>Available
-        </h4>
 
-        <button class="btn-mini status">Delete</button>
-        <button class="btn-mini status">Edit</button>
-    </div>
-    <div class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Product Name
-            <small>ID : 1234567890</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>ABS-EXC-123456-098
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>Rent
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>Available
-        </h4>
-
-        <button class="btn-mini status">Delete</button>
-        <button class="btn-mini status">Edit</button>
-    </div>
-    <div class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Product Name
-            <small>ID : 1234567890</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>ABS-EXC-123456-098
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>Rent
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>Available
-        </h4>
-
-        <button class="btn-mini status">Delete</button>
-        <button class="btn-mini status">Edit</button>
-    </div>
-    <a ng-click="listEquiMdl.next()" class="uppercase full-width button btn-large" ng-show="listEquiMdl.nextAvailable">
-        <span ng-show="listEquiMdl.working" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
-        load more </a>
 </div>
